@@ -2,7 +2,7 @@
 
     Joseph Heled            David Montgomery        Gary Wong
     Oeystein Johansen       Jim Segrave
-    Johanthan Kinsey        Joern Thyssen
+    Jonathan Kinsey         Joern Thyssen
  
                                    Support by:
 
@@ -11,8 +11,8 @@
 
                          Contributors of code include:
 
-    Olivier Baur    Nis Joergensen  Stein Kulseth   Rod Roark
-    Holger Bochnig  Kaoru Takahashi Mike Petch
+    Olivier Baur    Nis Joergensen  Kaoru Takahashi Mike Petch
+    Holger Bochnig  Petr Kadlec     Stein Kulseth   Rod Roark
 
                             Translations by:
 
